@@ -1,3 +1,9 @@
+2001-11-14  Tim Waugh  <twaugh@redhat.com>
+
+	* parport_pc.c (parport_pc_pci_probe): Hooks for PCI cards before
+	and after probing for ports.
+	* parport_serial.c (parport_register): Likewise.
+
 2002-01-20  Tim Waugh  <twaugh@redhat.com>
 
 	* parport_pc.c (parport_pc_compat_write_block_pio,
